# cryptosploit_modules

./: .gitmodules  MANIFEST.in  README.md  setup.cfg  setup.py
src/: __init__.py
src/cryptosploit_modules/: __init__.py
src/cryptosploit_modules/asymmetric/rsa/rsactftool/: __init__.py  config.json  do_install.sh  requirements.txt
src/cryptosploit_modules/encodings/base/base16/: __init__.py  config.json
src/cryptosploit_modules/encodings/base/base32/: __init__.py  config.json
src/cryptosploit_modules/encodings/hex/: __init__.py  config.json
src/cryptosploit_modules/encodings/morse/: __init__.py  config.json
src/cryptosploit_modules/encodings/urlencode/: __init__.py  config.json
src/cryptosploit_modules/hashes/cracker/: __init__.py  config.json  do_install.sh  hash_identifier.py
src/cryptosploit_modules/hashes/hashcracker/: __init__.py
src/cryptosploit_modules/magic/ciphey/: __init__.py  config.json
src/cryptosploit_modules/symmetric/aes/: __init__.py  config.json  do_install.sh
src/cryptosploit_modules/symmetric/affine/: __init__.py  config.json
src/cryptosploit_modules/symmetric/atbash/: __init__.py  config.json
src/cryptosploit_modules/symmetric/rot/: __init__.py  config.json
src/cryptosploit_modules/symmetric/vigenere/: __init__.py  config.json
src/cryptosploit_modules/symmetric/xortool/: __init__.py  config.json  do_install.sh
src/symmetric/rot/: __init__.py
templates/: README.md  __init__.py
templates/ExampleBinaryModuleName/: __init__.py  do_install.sh
templates/ExamplePythonModuleName/: __init__.py  config.json  do_install.sh
(+5 files in other folders)
