[metadata]
name = cryptosploit_modules
version = 0.0.1
url = https://github.com/y73n0k/cryptosploit-modules
author = SNESEAR, y73n0k
author_email = snesear@yandex.ru, ytka.kek@yandex.ru
license = GNU
description = Modules for cryptosploit (https://github.com/SNESEAR/cryptosploit)

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
