[metadata]
name = cryptosploit_modules
version = 0.0.1
url = https://github.com/y73n0k/cryptosploit-modules
author = SNESEAR, y73n0k
author_email = snesear@yandex.ru, ytka.kek@yandex.ru
description = Modules for cryptosploit (https://github.com/SNESEAR/cryptosploit)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Topic :: Security :: Cryptography

[options]
install_requires =
    tabulate
include_package_data=True
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.json
